--- a/host_vars/localhost.yml.example
+++ b/host_vars/localhost.yml.example
@@ -12,6 +12,7 @@ cluster_control_plane_count: 1
 control_plane_flavor: balanced1.2cpu4ram
 
 cluster_worker_count: 2
+cluster_max_worker_count: 3
 worker_flavour: balanced1.2cpu4ram
 
 cluster_node_cidr: 10.10.0.0/24
