--- a/roles/capi-cluster/workload/defaults/main.yml
+++ b/roles/capi-cluster/workload/defaults/main.yml
@@ -1,6 +1,11 @@
 ---
+enable_gpu_nodes: false
+
 kubernetes_version: v1.27.6
 capi_image_name: rocky-89-kube-v1.27.6 #ubuntu-2204-kube-v1.26.7-ca
+
+gpu_kubernetes_version: v1.27.7
+capi_gpu_image_name: rocky-89-kube-nvidia-v1.27.7
 
 capi_provider_version: v0.8.0
 
@@ -8,17 +13,25 @@ cluster_rdc_project: NeSI-Training-Test
 cluster_name: capi-cluster
 cluster_namespace: default
 
+capi_management_cluster: training-env-management
+
 openstack_ssh_key: kahus-key
 
 cluster_control_plane_count: 1
 control_plane_flavor: balanced1.2cpu4ram
 
 cluster_worker_count: 2
+cluster_max_worker_count: 3
 worker_flavour: balanced1.2cpu4ram
+
+cluster_gpu_worker_count: 1
+gpu_worker_flavour: gpu1.44cpu240ram.a40.1g.48gb
 
 cluster_node_cidr: 10.10.0.0/24
 cluster_pod_cidr: 192.168.0.0/16
 cluster_route_id: 3c0cb930-2bbe-4c9c-ac61-6dbc9410c3e9
+
+cluster_external_network_id: 33d0c11b-b659-4b77-9afc-5676fe965839
 
 cluster_network_name: "{{ cluster_rdc_project }}"
 
@@ -36,8 +49,13 @@ kube_config_location: "~/.kube"
 yq_version: v4.2.0 
 yq_repo: "https://github.com/mikefarah/yq/releases/download/{{ yq_version }}/yq_linux_amd64"
 
+helm_cli_repo: "https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3"
+
 ca_cert_dir: /usr/local/share/ca-certificates
 ca_cert_file: "{{ ca_cert_dir }}/zero_ca.crt"
+
+autoscaler_ns: "kube-system"
+autoscaler_image: "registry.k8s.io/autoscaling/cluster-autoscaler:v1.29.0"
 
 ## Variables for OpenID Connect Configuration https://kubernetes.io/docs/admin/authentication/
 ## To use OpenID you have to deploy additional an OpenID Provider (e.g Dex, Keycloak, ...)
