--- a/roles/capi-cluster/workload/defaults/main.yml
+++ b/roles/capi-cluster/workload/defaults/main.yml
@@ -31,9 +31,11 @@ cluster_node_cidr: 10.10.0.0/24
 cluster_pod_cidr: 192.168.0.0/16
 cluster_route_id: 3c0cb930-2bbe-4c9c-ac61-6dbc9410c3e9
 
-cluster_external_network_id: 33d0c11b-b659-4b77-9afc-5676fe965839
+cluster_external_network_id: 3f405cc9-28a3-4973-b5a1-7f50f112e5d5
 
 cluster_network_name: "{{ cluster_rdc_project }}"
+
+cluster_settle_timeout_base: 3
 
 bin_dir: /usr/local/bin
 
