--- a/roles/capi-cluster/workload/tasks/configure-install-clusterctl.yml
+++ b/roles/capi-cluster/workload/tasks/configure-install-clusterctl.yml
@@ -67,6 +67,10 @@
   retries: 10
   delay: 30
 
+- name: Workload | Pause for {{ cluster_settle_timeout_base * cluster_control_plane_count }} minutes while cluster settles
+  ansible.builtin.pause:
+    minutes: "{{ cluster_settle_timeout_base * cluster_control_plane_count }}"
+
 - name: Workload | Get {{ cluster_name }} cluster kubeconfig yaml 
   shell: >-
     kubectl get secret -n {{ cluster_namespace }} {{ cluster_name }}-kubeconfig 
