--- a/setup-workload.yml
+++ b/setup-workload.yml
@@ -1,6 +1,10 @@
 ---
 - name: Deploy worload cluster
   hosts: localhost
+  vars:
+    appliances_environment_root: "{{ lookup('env', 'APPLIANCES_ENVIRONMENT_ROOT') }}"
+  vars_files:
+    - "{{ appliances_environment_root }}/variables.yml"
   become_user: root
   any_errors_fatal: "true"
   roles:
