check vars are set

--- a/roles/capi-cluster/workload/tasks/main.yml
+++ b/roles/capi-cluster/workload/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: Workload | Check vars are set
+  include_tasks: check-vars.yml
+
 - name: Workload | Prerequisites
   include_tasks: prerequisites.yml
 
