fixes and updates

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ host_vars/localhost.yml
 environments/*
 !environments/example
 #!environments/cni-tools-prod
+roles/ansible-capi-workload
+roles/ansible-capi-workload/*
