--- a/environments/example/variables.yml
+++ b/environments/example/variables.yml
@@ -12,10 +12,12 @@ openstack_ssh_key: NeSI_RDC_KEYPAIR_NAME
 
 cluster_control_plane_count: 1
 control_plane_flavor: balanced1.2cpu4ram
+control_plane_volume_size: 0
 
 cluster_worker_count: 2
 cluster_max_worker_count: 3
 worker_flavour: balanced1.2cpu4ram
+worker_volume_size: 0
 
 cluster_node_cidr: 10.10.0.0/24
 cluster_pod_cidr: 192.168.0.0/16
