--- a/setup-workload.yml
+++ b/setup-workload.yml
@@ -8,4 +8,4 @@
   become_user: root
   any_errors_fatal: "true"
   roles:
-    - { role: capi-cluster/workload }
+    - { role: ansible-capi-workload }
