--- a/requirements.yml
+++ b/requirements.yml
@@ -1,5 +1,10 @@
 ---
 roles:
   - src: https://github.com/lbrick/ansible-capi-workload.git
-    version: v0.2.5
+    version: main
     name: ansible-capi-workload
+
+collections:
+  - name: openstack.cloud
+    version: 2.2.0
+    type: galaxy
