--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 ---
 roles:
   - src: https://github.com/lbrick/ansible-capi-workload.git
-    version: main
+    version: v0.3.2
     name: ansible-capi-workload
 
 collections:
